# krakend_conf

./: .gitlab-ci.yml  Cargo.toml  README.md  krakend_conf.json  krakend_endpoints.json  krakend_mini.json  openapi.json  openapi.yaml  swagger.json  swagger.yaml
oas2krakend/: Cargo.toml  krakend.json
oas2krakend/src/: main.rs
oas2krakend/templates/: krakend.json
src/: krakend.rs  lib.rs  main.rs  swagger.rs
