[package]
name = "krakend_conf"
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
serde_yaml = "0.8.9"
openapiv3 = "0.3.0"
