[package]
name = "krakend_conf"
description = "A tool to generate krakend endpoint configuration from openapi json, built on the openapiv3 crate."
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
repository = "https://gitlab.com/reed-wolf/krakend_conf"
documentation = "https://docs.rs/krakend_conf/"
keywords = ["krakend", "gateway"]
categories = ["config", "web-programming"]
license = "MIT OR Apache-2.0"

edition = "2018"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
openapiv3 = "0.3.0"
serde_yaml = "0.8.14"

[dev-dependencies]
serde_json = "1.0.40"

[badges]
gitlab = { repository = "reed-wolf/krakend_conf", branch = "master" }
