[package]
name = "oas2krakend"
version = "0.1.0"
authors = ["Andras Mocsary <425404+mocsy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
krakend_conf = { path = "../" }
openapiv3 = "0.3.2"
serde_json = "1.0.60"
serde_yaml = "0.8.14"
